[all java] Add Java module support (#7424)
Resolves #7236