@@ -56,6 +56,13 @@ build.dependsOn outputSourcesJar
 build.dependsOn outputJavadocJar
 build.dependsOn outputJar
 
+// Projects that generate source code with annotation processors (such as avaje serde classes)
+// need to have those generated files on the source path so javadoc can pick them up.
+tasks.named('javadoc').configure {
+    it.dependsOn('compileJava')
+}
+sourceSets.main.java.srcDir "${buildDir}/generated/sources/annotationProcessor/java/main"
+
 project(':').libraryBuild.dependsOn build
 
 publishing {
@@ -74,7 +81,7 @@ publishing {
 }
 
 test {
-    jvmArgs '--enable-native-access=ALL-UNNAMED'
+    jvmArgs '--enable-native-access=org.opencv,wpilib.apriltag,wpilib.hal,wpilib.math,wpilib.ntcore,wpilib.util,ALL-UNNAMED'
     useJUnitPlatform()
     systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
     testLogging {
@@ -101,6 +108,12 @@ sourceSets {
 
 configurations {
     devImplementation.extendsFrom(implementation)
+    configureEach {
+        // avaje has incorrectly listed io.avaje:avaje-jsonb-inject-plugin as a dependency of io.avaje:avaje-jsonb,
+        // which results in runtime crashes when `--add-modules ALL-MODULE-PATH` is used.
+        // We don't use or care about avaje's dependency injection library, so we manually exclude the bridge library.
+        exclude(group: 'io.avaje', module: 'avaje-jsonb-inject-plugin')
+    }
 }
 
 dependencies {
